--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   agent:
     build:
       context: ..
-      dockerfile: deployment/Dockerfile.agent
+      dockerfile: Dockerfile.agent
     env_file:
       - .env.production
     depends_on:
@@ -21,7 +21,7 @@ services:
   frontend:
     build:
       context: ../frontend
-      dockerfile: ../deployment/Dockerfile.frontend
+      dockerfile: Dockerfile
     env_file:
       - .env.production
     depends_on:
